[package]
name = "yuan"
version = "0.2.1"
edition = "2024"
description = "A common utils lib."
license = "MIT OR Apache-2.0"
default-run = "yuan"
authors = ["xring <xringxie@gmail.com>"]
repository = "https://github.com/xring/yuan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"

[[bin]]
name = "yuan"
path = "src/main.rs"

[[bin]]
name = "yuan-post-json"
path = "src/bin/post_json.rs"